[package]
name = "systemd-boot-conf"
version = "0.1.0"
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
repository = "https://github.com/pop-os/systemd-boot-conf"
description = "Managing the systemd-boot loader configuration"
license = "MIT"
readme = "README.md"
keywords = ["linux", "systemd", "systemd-boot"]
categories = ["os::unix-apis"]

[dependencies]
itertools = "0.7.0"
err-derive = "0.1.5"
