[package]
name = "systemd-boot-conf"
version = "0.2.2"
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
repository = "https://github.com/pop-os/systemd-boot-conf"
description = "Managing the systemd-boot loader configuration"
license = "MIT"
readme = "README.md"
keywords = ["linux", "systemd", "systemd-boot"]
categories = ["os::unix-apis"]
edition = "2018"

[dependencies]
itertools = "0.10"
once_cell = "1.3"
thiserror = "1.0"
